--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "^5.4.1"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 python-dotenv = "^0.19.0"
 aiofiles = "^0.7.0"
+aiosql = "^3.4.1"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
