clean up, add some role endpoints. Logger not working!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.exclude": {
-        "**/__": true,
-        // "**/__init__.py": true
+        // "**/__": true,
+        "**/__init__.py": true,
+        "**/__pycache__": true
     }
 }
