--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ aiofiles = "^0.7.0"
 aiosql = "^3.4.1"
 fastapi = "^0.75.0"
 rich = "^12.0.1"
+pyttsx3 = "^2.90"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.770"
